fix: use Math.clamp for percentile rank